[tool.poetry]
name = "asynctest"
version = "0.1.0"
description = ""
authors = ["Robert Alexander <gogonegro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
httpx = "^0.27.0"
uvicorn = "^0.30.3"
aiohttp = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
